<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/choose_category"
        android:textAppearance="?android:textAppearanceLarge" />

    <CheckBox
        android:id="@+id/curiosities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/curiosities" />

    <CheckBox
        android:id="@+id/varieties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/variety" />

    <CheckBox
        android:id="@+id/companies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/companies" />

    <CheckBox
        android:id="@+id/hardware"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hardware" />

    <CheckBox
        android:id="@+id/internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/internet" />

    <CheckBox
        android:id="@+id/renown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/renown" />

    <CheckBox
        android:id="@+id/programming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/programming" />

    <CheckBox
        android:id="@+id/software"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/software" />

    <Button
        android:id="@+id/new_game_by_category"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:text="@string/play" />
</LinearLayout>